<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Teachers and Parents</string>
    <string name="title_login">Login</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="title_add_classroom">Add Classroom</string>
    <string name="title_join_classroom">Join Classroom</string>

    <string name="app_logo">MyPLogo</string>

    <string name="create_account"><font color="#00ff00">text</font></string>
    <string name="forgotten_password"><font color="#7EE77E">text</font></string>
    <string name="prompt_email">Email Address</string>
    <string name="prompt_password">Password</string>
    <string name="login">Log in</string>
    <string name="username">Name</string>
    <string name="register">Register</string>
    <string name="back_to_login">Return to Log In</string>

    <string name="prompt2_password">Confirm Password</string>
    <string name="prompt_first_last_name">First Last Name</string>
    <string name="prompt_second_last_name">Second Last Name (Optional)</string>
    <string name="prompt_phone">Phone</string>
    <string name="lbl_gender">Gender</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_password_confirmation">Passwords do not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="no_account">No account? Register</string>

    <string name="home_name">Choose what kind of user you\'ll be</string>


    <!-- FALTA TRADUCIR EL STRING-ARRAY! -->

    <string name="grade">Grade:</string>>
    <string name="group">Group:</string>>
    <string name="school">School:</string>>
    <string name="school_name_hint">School name</string>>
    <string name="create">CREATE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Teacher\'s name</string>
    <string name="nav_header_subtitle">User type</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Options</string>
    <string name="messages">Messages</string>
    <string name="memos">School Reports</string>
    <string name="user_tools">User Tools</string>
    <string name="create_classroom">Create classroom</string>
    <string name="join_classroom">Join the classroom</string>
    <string name="sign_out">Sign out</string>
    <string name="next">Next</string>
    <string name="share_explanation">Insert the code which was shared by the teacher to join the classroom.</string>
    <string name="insert_code">Insert invitation code</string>

    <string name="title_classrooms">Configure your classroom</string>


    <!-- CHAT -->
    <string name="sharecode_header">Share Code</string>
    <string name="sharecode_parents">Parents\' code:</string>
    <string name="sharecode_teacher">Teachers\' code:</string>

    <string name="sharecode_insertcode">Code</string>
    <string name="sharecode_to_classrooms">Continue to Classrooms</string>
    <string name="hint_message_text">Write your message...</string>

    <!-- FireStore Strings -->
    <string name="collection_users">Users</string>
    <string name="collection_classrooms">Classrooms</string>
    <string name="collection_chat_messages">Chat Messages</string>
    <string name="collection_chat">Chat</string>
    <string name="collection_chatroom_user_list">User List</string>
    <string name="collection_classrom_members">Classrooms Members</string>

    <string name="back_classroom">Return to Classrooms\' list</string>

    <!--CHAT-->
    <string name="title_chat">Chat</string>
    <string name="txt_mensaje">Write a message</string>
    <string name="chatbox"></string>
    <string name="btn_enviar">Send</string>

    <string name="toast_clipboard">Copied to clipboard</string>
    <string name="classrooms_list_delete">Delete classroom</string>
    <string name="chat_list_delete">Delete chat</string>
    <string name="classrooms_info">Show Classroom\'s codes</string>
    <string name="error_empty_message">Message cannot be empty!</string>
    <string name="error_message_failed">Message failed to send!</string>


    <!-- Intent extras -->
    <string name="intent_chatroom">intent_chatroom</string>
    <string name="intent_user_list">intent_user_list</string>

    <!-- Fragments Names -->
    <string name="fragment_user_list">User List</string>

    <!-- Other Strings -->
    <string name="action_create_chatroom">Create Chatroom</string>
    <string name="action_leave_chatroom">Leave chatroom</string>
    <string name="action_chatroom_user_list">User list</string>
</resources>